<resources>
  <string name="app_name">Silenus</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="log_in">Log in!</string>
  <string name="welcome_user">Welcome, %1$s</string>
  <string name="silenus">Silenus</string>
  <string name="log_out">Log out?</string>
  <string name="welcome">Welcome,&#160;</string>
  <string name="sign_in_failed">Sign in failed…</string>
  <string name="logged_out">You have been logged out!</string>
  <string name="null_user_error">Error, please try logging in again.</string>
  <string name="silenus_hub">Your Silenus Hub</string>
  <string name="your_reviews">Your Reviews</string>
  <string name="rate_an_establishment">Rate an Establishment</string>
  <string name="name_bar_text">Name:</string>
  <string name="rating_bar_text">Rating:</string>
  <string name="location_bar_text">Location:</string>
  <string name="description_bar_text">Description</string>
  <string name="submit_bar">Submit</string>
  <string name="location_selected">You Have Selected a Location</string>
  <string name="this_place_query">Is this the place?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="no_establishment">Please enter an establishment!</string>
  <string name="no_location">Please select a location!</string>
  <string name="error">An error occurred…</string>
  <string name="error_adding_review">Error adding review.</string>
  <string name="review_added">Review added!</string>
  <string name="error_adding_user">Error adding user.</string>
  <string name="user_added">Review added!</string>
  <string name="loading">Loading…</string>
  <string name="reviews_retrieved">Reviews retrieved!</string>
  <string name="add_review">Add Review</string>
  <string name="edit_review">Edit Review</string>
  <string name="view_location">View Location</string>
  <string name="confirm">Confirm</string>
  <string name="quit">Quit</string>
  <string name="edit_establishment">Edit Establishment</string>
  <string name="changes_aborted">Changes Aborted</string>
  <string name="review_edited">Review Edited!</string>
  <string name="test">Testing.</string>
    <string name="delete_review">Delete Review</string>
  <string name="review_deleted">Review Deleted!</string>
  <string name="silenus_subtitle">Keep track of your favourite bars and restaurants!</string>
  <string name="use_google">Use your Google account?</string>
  <string name="use_email">Log in with your E-Mail and Password?</string>
  <string name="how_login">How would you like to log in?</string>
</resources>