<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <TextView
      android:id="@+id/how_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/how_login"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed" />

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/how_text">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="164dp">

      <TextView
          android:id="@+id/google_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:padding="16dp"
          android:text="@string/use_google"
          android:textAlignment="center" />

      <ImageView
          android:id="@+id/google_signin"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_gravity="center"
          app:srcCompat="@drawable/googleg_standard_color_18" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="372dp">

      <TextView
          android:id="@+id/email_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:padding="16dp"
          android:text="@string/use_email"
          android:textAlignment="center" />

      <ImageView
          android:id="@+id/email_signin"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_gravity="center"
          app:srcCompat="@android:drawable/ic_dialog_email"
          app:tint="?attr/colorPrimaryVariant" />


    </LinearLayout>


  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>